--- a/src/screens/Login/Login.css
+++ b/src/screens/Login/Login.css
@@ -18,7 +18,7 @@ body, html {
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   width: 600px;
-  height: 700px;
+  height: 790px;
   padding: 40px 30px;
   text-align: center;
 }
@@ -63,4 +63,13 @@ img {
 .criar-conta {
   margin-top: 10px;
   margin-left: 2px;
+}
+
+.select {
+  width: 100%;
+  padding: 9px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 15px;
 }
