--- a/src/screens/Cadastro/Register.css
+++ b/src/screens/Cadastro/Register.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +13,7 @@ body, html {
   align-items: center;
 }
 
-.login-container {
+.register-container {
   margin: auto;
   margin-top: 10%;
   background-color: white;
@@ -27,13 +26,13 @@ body, html {
   min-height: 500px;
 }
 
-.login-box {
+.register-box {
   display: flex;
   width: 100%;
   height: 100%;
 }
 
-.login-left {
+.register-left {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -41,13 +40,13 @@ body, html {
   padding: 20px;
 }
 
-.login-left img {
+.register-left img {
   max-width: 100%;
   height: auto;
   border-radius: 12px;
 }
 
-.login-right {
+.register-right {
   flex: 1;
   padding: 40px 50px;
   display: flex;
@@ -55,7 +54,7 @@ body, html {
   justify-content: center;
 }
 
-.login-right h2 {
+.register-right h2 {
   color: #b5651d;
   font-size: 2.4rem;
   margin-bottom: 30px;
@@ -63,12 +62,13 @@ body, html {
   font-weight: 700;
 }
 
-.login-right form {
+.register-right form {
   display: flex;
   flex-direction: column;
 }
 
-.login-right input {
+.register-right input,
+.register-right select {
   padding: 12px 15px;
   margin-bottom: 20px;
   border: 2px solid #b5651d;
@@ -78,12 +78,13 @@ body, html {
   transition: border-color 0.3s ease;
 }
 
-.login-right input:focus {
+.register-right input:focus,
+.register-right select:focus {
   border-color: #f4c430;
   outline: none;
 }
 
-.login-right button {
+.register-right button {
   background-color: #b5651d;
   color: white;
   border: none;
@@ -96,7 +97,7 @@ body, html {
   margin-top: 10px;
 }
 
-.login-right button:hover {
+.register-right button:hover {
   background-color: #8e4310;
 }
 
@@ -118,20 +119,19 @@ body, html {
   text-decoration: underline;
 }
 
-
 @media (max-width: 768px) {
-  .login-container {
+  .register-container {
     flex-direction: column;
     min-height: auto;
   }
-  .login-left, .login-right {
+  .register-left, .register-right {
     flex: none;
     width: 100%;
   }
-  .login-left {
+  .register-left {
     padding: 30px 20px;
   }
-  .login-right {
+  .register-right {
     padding: 30px 20px;
   }
 }
